Automatically reloading a page with Live server

--- a/natours/package.json
+++ b/natours/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "compile": "node-sass sass/main.scss css/style.css -w"
+    "compile": "node-sass sass/main.scss css/style.css -w",
+    "server": "live-server"
   },
   "author": "Mike",
   "license": "ISC",
   "dependencies": {
+    "live-server": "^1.2.0",
     "node-sass": "^4.9.0"
   }
 }
